French, Italian, Norwegian Bokmal Updates in some branch 4.4 modules and French translation updates in some trunk modules.
(Old svn revision: 26244)

--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -318,7 +318,7 @@ msgstr "Nytt Panel"
 #: ../panel/panel-dialogs.c:1606
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Panel administrator"
+msgstr "Innstillinger for Panel"
 
 #: ../plugins/actions/actions.c:267 ../plugins/actions/actions.c:303
 #: ../plugins/actions/actions.c:459
