--- a/po/fr.po
+++ b/po/fr.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-23 11:15+0200\n"
-"PO-Revision-Date: 2007-11-03 10:31+0100\n"
-"Last-Translator: Maximilian Schleiss <maximilian@xfce.org>\n"
+"PO-Revision-Date: 2007-11-05 06:23+0100\n"
+"Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
@@ -266,7 +266,7 @@ msgstr "Étendre à tous les moniteurs"
 #: ../panel/panel-dialogs.c:1521
 #: ../plugins/launcher/launcher-dialog.c:1558
 msgid "Left"
-msgstr "à gauche"
+msgstr "À gauche"
 
 #: ../panel/panel-dialogs.c:986
 #: ../panel/panel-dialogs.c:1225
@@ -277,7 +277,7 @@ msgstr "à gauche"
 #: ../panel/panel-dialogs.c:1522
 #: ../plugins/launcher/launcher-dialog.c:1559
 msgid "Right"
-msgstr "à droite"
+msgstr "À droite"
 
 #: ../panel/panel-dialogs.c:991
 #: ../panel/panel-dialogs.c:1230
@@ -288,7 +288,7 @@ msgstr "à droite"
 #: ../panel/panel-dialogs.c:1523
 #: ../plugins/launcher/launcher-dialog.c:1560
 msgid "Top"
-msgstr "en haut"
+msgstr "En haut"
 
 #: ../panel/panel-dialogs.c:993
 #: ../panel/panel-dialogs.c:1232
@@ -299,7 +299,7 @@ msgstr "en haut"
 #: ../panel/panel-dialogs.c:1524
 #: ../plugins/launcher/launcher-dialog.c:1561
 msgid "Bottom"
-msgstr "en bas"
+msgstr "En bas"
 
 #. position
 #: ../panel/panel-dialogs.c:1024
@@ -423,11 +423,11 @@ msgstr "Quitter + Verrouiller l'écran"
 
 #: ../plugins/clock/clock-dialog.c:345
 msgid "Custom"
-msgstr "Personnalisé"
+msgstr "Autre"
 
 #: ../plugins/clock/clock-dialog.c:399
 msgid "Display _seconds"
-msgstr "Afficher des _secondes"
+msgstr "Afficher les _secondes"
 
 #: ../plugins/clock/clock-dialog.c:408
 msgid "Use 24-_hour clock"
@@ -435,11 +435,11 @@ msgstr "Utiliser 24 _heures dans l'horloge"
 
 #: ../plugins/clock/clock-dialog.c:414
 msgid "Sho_w AM/PM"
-msgstr "_Afficher AM/PM"
+msgstr "Afficher _AM/PM"
 
 #: ../plugins/clock/clock-dialog.c:423
 msgid "True _binary clock"
-msgstr "Horloge _binaire"
+msgstr "Horloge _binaire réelle"
 
 #. create dialog
 #: ../plugins/clock/clock-dialog.c:465
@@ -563,7 +563,7 @@ msgstr "Sélectionnez une icône pour \"%s\""
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr "Sans nom"
+msgstr "n/a"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
@@ -608,7 +608,7 @@ msgstr "Par défaut"
 
 #: ../plugins/launcher/launcher-dialog.c:1562
 msgid "Inside Button"
-msgstr "Bouton intlrieur"
+msgstr "À l’intérieur"
 
 #: ../plugins/pager/pager.c:336
 #: ../plugins/pager/pager.desktop.in.in.h:2
@@ -648,7 +648,7 @@ msgstr "_Espace vide"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr "Étendre l'e_space vide"
+msgstr "E_space vide avec remplissage"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
@@ -660,7 +660,7 @@ msgstr "_Poignée"
 
 #: ../plugins/separator/separator.c:473
 msgid "_Dots"
-msgstr "_Points"
+msgstr "P_oints"
 
 #: ../plugins/showdesktop/showdesktop.c:33
 msgid "Restore hidden windows"
@@ -691,12 +691,12 @@ msgstr "Applications cachées"
 #: ../plugins/systray/xfce-tray-widget.c:318
 #, c-format
 msgid "Failed to register the system tray for screen %d"
-msgstr "Échec à l'enregistrement de la zone de notification pour l'écran %d"
+msgstr "Impossible d’activer le système de notification pour l’écran %d"
 
 #: ../plugins/systray/xfce-tray-manager.c:461
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr "Échec d'acquisition de sélection du gestionnaire pour l'écran %d"
+msgstr "Impossible d’acquérir le gestionnaire de sélection pour l’écran %d"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:143
 #: ../plugins/tasklist/tasklist-dialogs.c:209
