Updated Romanian translations by Mişu Moldovan <dumol@gnome.ro>
(Old svn revision: 26320)

--- a/po/ro.po
+++ b/po/ro.po
@@ -1,14 +1,14 @@
 # Romanian translation of xfce4-panel.
-# Copyright (C) 2002-2006 The Xfce development team.
+# Copyright (C) 2002-2007 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Mişu Moldovan <dumol@gnome.ro>, 2004-2007.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: xfce4-panel 4.4.2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-03-27 15:28+0200\n"
-"PO-Revision-Date: 2007-01-20 23:09+0200\n"
+"PO-Revision-Date: 2007-11-16 21:47+0200\n"
 "Last-Translator: Mişu Moldovan <dumol@gnome.ro>\n"
 "Language-Team: Romanian <gnomero-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -27,7 +27,7 @@ msgstr "Emulator de terminal X"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
-msgstr "Editare fişiere text"
+msgstr "Editare de fişiere text"
 
 #: ../config/launcher-8.rc.in.h:2 ../plugins/launcher/launcher-dialog.c:102
 msgid "Editor"
@@ -122,9 +122,8 @@ msgstr "Panou Xfce"
 
 #: ../panel/panel-app.c:877
 msgid "You can't remove the last panel. Would you like to exit the program?"
-msgstr ""
-"Ultimul panou nu poate fi închis. Doriţi să închideţi cu totul aplicaţia "
-"xfce4-panel?"
+msgstr "Ultimul panou nu ar trebui închis. Doriţi să închideţi cu totul "
+"aplicaţia xfce4-panel?"
 
 #: ../panel/panel-app.c:904
 #, c-format
@@ -184,8 +183,8 @@ msgid ""
 "\n"
 msgstr ""
 " OPŢIUNI\n"
-" -h, --help      Arată acest mesaj şi ieşi\n"
-" -v, --version   Arată acest mesaj şi ieşi\n"
+" -h, --help      Arată acest mesaj\n"
+" -v, --version   Arată acest mesaj\n"
 " -c, --customize Arată fereastra cu preferinţe\n"
 " -s, --save      Salvează preferinţele\n"
 " -r, --restart   Reporneşte panourile\n"
@@ -316,12 +315,12 @@ msgstr "Ştergere panou"
 
 #: ../panel/panel-dialogs.c:1549
 msgid "New Panel"
-msgstr "Nou panou"
+msgstr "Panou nou"
 
 #: ../panel/panel-dialogs.c:1606
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Administrator de panouri"
+msgstr "Preferinţe administrator de panouri"
 
 #: ../plugins/actions/actions.c:267 ../plugins/actions/actions.c:303
 #: ../plugins/actions/actions.c:459
@@ -334,7 +333,7 @@ msgstr "Acţiuni panou"
 
 #: ../plugins/actions/actions.c:449
 msgid "Select action type:"
-msgstr "Selectare tip acţiuni:"
+msgstr "Selectaţi tipul de acţiune:"
 
 #: ../plugins/actions/actions.c:460
 msgid "Quit + Lock screen"
@@ -677,8 +676,8 @@ msgid ""
 "<i>Urgency notification</i> will blink the button when an application needs "
 "attention."
 msgstr ""
-"<i>Notificarea de urgenţă</i> va clipi butonul când o aplicaţie necesită "
-"atenţia utilizatorului."
+"<i>Notificarea de urgenţă</i> va face butonul să clipească când o aplicaţie "
+"necesită atenţia utilizatorului."
 
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
@@ -776,3 +775,4 @@ msgstr "Arată lista ferestrelor disponibile"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Administratorul de panouri Xfce 4"
+
