--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,8 @@
   in intltool 0.35.x and 0.36.x. (Brian)
 - Updated translations: Pau Rul-lan Ferragut (ca), Fabio Riga (it),
   Terje Uriansrud (nb_NO), Nuno Miguel (pt_PT), Vincent Tunru (nl),
-  Dimitri Gogelia (ka), Ivan Masár (sk), Fábio Nogueira (pt_BR).
+  Dimitri Gogelia (ka), Ivan Masár (sk), Fábio Nogueira (pt_BR),
+  Mişu Moldovan (ro).
 - New translations: Tegegne Tefera (am), RPrieditis (lv).
 
 
