fr.po: Rename name in .desktop files with consistency
(Old svn revision: 26328)

--- a/po/fr.po
+++ b/po/fr.po
@@ -875,7 +875,7 @@ msgstr "Afficher la liste des fenêtres disponibles"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Gestionnaire du panneau Xfce 4"
+msgstr "Xfce 4 Gestionnaire de panneau"
 
 #~ msgid "Show application _names"
 #~ msgstr "Afficher le _nom des applications"
