* Backport session leak fix in branch.
(Old svn revision: 26387)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+4.4.3
+=====
+- Fix memory leak in session management.
+
+
 4.4.2
 =====
 - Fix window manager hints reporting width 1 pixel too wide (bug #3402).
