Spanish translations branch updates and German translations trunk updates
(Old svn revision: 26428)

--- a/po/es.po
+++ b/po/es.po
@@ -255,7 +255,7 @@ msgstr "Desplazable"
 
 #: ../panel/panel-dialogs.c:1110
 msgid "Auto_hide"
-msgstr "Ocultar automáticamente"
+msgstr "Auto_ocultar"
 
 #: ../panel/panel-dialogs.c:1128 ../plugins/actions/actions.c:471
 msgid "Orientation:"
