Basque trasnaltion update for trunk
(Old svn revision: 26445)

--- a/po/eu.po
+++ b/po/eu.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: eu\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-10-23 11:15+0200\n"
-"PO-Revision-Date: 2007-09-12 21:52+0200\n"
+"PO-Revision-Date: 2007-12-07 11:35+0100\n"
 "Last-Translator: Piarres Beobide <pi@beobide.net>\n"
 "Language-Team: Euskara <Librezale@librezale.org>\n"
 "MIME-Version: 1.0\n"
@@ -63,8 +63,7 @@ msgid "Remove \"%s\"?"
 msgstr "\"%s\" Ezabatu?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
+msgid "The item will be removed from the panel and its configuration will be lost."
 msgstr ""
 "Elementu hau paneletik ezabatua izango da eta bere konfigurazioa galdu "
 "egingo da."
@@ -497,7 +496,7 @@ msgstr "Hauatatu ikono bat \"%s\"-entzat"
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr ""
+msgstr "Izengabea"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
@@ -561,9 +560,8 @@ msgid "Switch workspaces using the mouse wheel"
 msgstr "Idazmahai birtualak sagu erruberaren bidez txandakatu"
 
 #: ../plugins/pager/pager.c:428
-#, fuzzy
 msgid "Show workspace names"
-msgstr "Idazmahai e_kintzak bistarazi"
+msgstr "Idazmahai izenak bistarazi"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -622,9 +620,9 @@ msgstr "Ezkutatutako Aplikazioak"
 
 #. create message
 #: ../plugins/systray/xfce-tray-widget.c:318
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to register the system tray for screen %d"
-msgstr "Huts %d pantailaren kudeatzaile hautapena eskuratzerakoan"
+msgstr "Huts %d pantailaren sistema-barra erregistratzerakoan"
 
 #: ../plugins/systray/xfce-tray-manager.c:461
 #, c-format
@@ -812,5 +810,3 @@ msgstr "Leiho erabilgarri zerrenda bistarazi"
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panel Kudeatzailea:"
 
-#~ msgid "Show application _names"
-#~ msgstr "Bistarazi aplikazio _izenak"
