--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-07	Piarres Beobide <pi@beobide.net>
+
+	* eu.po: Basque trasnaltion update
+
 2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Rename the name in the desktop entry files with consistency
