Norwegian Bokmal translations update in terminal, thunar, xfce-mcs-plugins and xfce4-panel
(Old svn revision: 26449)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,12 +1,17 @@
-2007-12-07	Piarres Beobide <pi@beobide.net>
+2007-12-07  Maximilian Schleiss <maximilian@xfce.org>
+
+	* nb_NO.po: Norwegian Bokmal translation update
+	by Terje Uriansrud <ter@operamail.com>
+
+2007-12-07  Piarres Beobide <pi@beobide.net>
 
 	* eu.po: Basque trasnaltion update
 
-2007-11-17	Mike Massonnet <mmassonnet@xfce.org>
+2007-11-17  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Rename the name in the desktop entry files with consistency
 
-2007-11-15	Mike Massonnet <mmassonnet@xfce.org>
+2007-11-15  Mike Massonnet <mmassonnet@xfce.org>
 
 	* ur.po, LINGUAS: Add Urdu translation by ﻢﺤﻣﺩ ﻊﻠﻳ ﺎﻠﻤﻜﻳ
 	makki.ma@gmail.com
@@ -15,7 +20,7 @@
 
 	* lv.po: Update translations by RPrieditis <RPrieditis@inbox.lv>
 
-2007-11-05	Mike Massonnet <mmassonnet@xfce.org>
+2007-11-05  Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Update translation
 
