xarchiver, thunar, xfce4-panel, terminal: Update french translation
(Old svn revision: 26493)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-18	Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Update
+
 2007-12-07  Maximilian Schleiss <maximilian@xfce.org>
 
 	* nb_NO.po: Norwegian Bokmal translation update
