--- a/po/nb_NO.po
+++ b/po/nb_NO.po
@@ -2,6 +2,7 @@
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
 # Eskild Hustvedt <eskild@goldenfiles.com>, 2004.
+# Christian Lomsdalen <christian@vindstille.net>, 2007.
 #
 msgid ""
 msgstr ""
@@ -9,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
 "PO-Revision-Date: 2005-08-18 01:10+0900\n"
-"Last-Translator: Eskild Hustvedt <eskild@goldenfiles.com>\n"
+"Last-Translator: Christian Lomsdalen <christian@vindstille.net>\n"
 "Language-Team: Norwegian Bokmal <i18n-nb@lister.ping.uio.no>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -369,7 +370,7 @@ msgstr "Bruk 24-_timers klokke"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "Bl_inkende tidsskiller"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
@@ -615,18 +616,16 @@ msgstr "Det kjører allerede en systemkurv på denne skjermen"
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "Panelhåndteren har mistet markeringen"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Er du sikker på at du vil fjerne skrivebord '%s'?"
+msgstr "Er du sikker på at du vil fjerne listen over kjente programmer?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Antall rader:"
+msgstr "_Antall rader:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
@@ -818,6 +817,3 @@ msgstr "Vis liste over alle tilgjengelige vinduer"
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
 msgstr "Xfce 4 Panelbehandler"
-
-#~ msgid "Failed to register the system tray for screen %d"
-#~ msgstr "Klarte ikke registrere systemkurv for skjerm %d"
