French translation: fix two accelerators
(Old svn revision: 26627)

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-12-18 06:51+0100\n"
+"PO-Revision-Date: 2008-02-18 17:33+0100\n"
 "Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -392,7 +392,7 @@ msgstr "Utiliser 24 _heures dans l'horloge"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr "Flash clignotant des séparateurs"
+msgstr "Cl_ignoter sur les séparateurs"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
