--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-18	Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Fix accelerator
+
 2008-02-15	Mike Massonnet <mmassonnet@xfce.org>
 
 	* si.po: Merge from Xfce 4.4 branch (r26612)
