xfce4-panel: Fix fuzzy string in French translation
(Old svn revision: 26628)

--- a/po/fr.po
+++ b/po/fr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-02-18 17:33+0100\n"
+"PO-Revision-Date: 2008-02-19 19:16+0100\n"
 "Last-Translator: Mike Massonnet <mmassonnet@gmail.com>\n"
 "Language-Team: French <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -640,9 +640,8 @@ msgstr "Il y a déjà une zone de notification système active sur cet écran"
 
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
-#, fuzzy
 msgid "The tray manager lost selection"
-msgstr "La notification système a perdu la sélection"
+msgstr "La zone de notification système a perdu la sélection"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
 msgid "Are you sure you want to clear the list of known applications?"
