--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19	Mike Massonnet <mmassonnet@xfce.org>
+
+	* fr.po: Fix fuzzy string
+
 2008-02-18	Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Fix accelerator
