--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19	Stavros Giannouris <stavrosg@hellug.gr>
+
+	* el.po: Improve/update translation.
+
 2008-02-19	Mike Massonnet <mmassonnet@xfce.org>
 
 	* fr.po: Fix fuzzy string
@@ -307,7 +311,7 @@
 	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
-2006-08-26  Stavros Giannouris <stavrosg@serverhive.com>
+2006-08-26  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -344,7 +348,7 @@
 	* eo.po: Updated Esperanto translations by
 	  Antono Vasiljev <antonalist@gmail.com>
 
-2006-08-04  Stavros Giannouris <stavrosg@serverhive.com>
+2006-08-04  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -394,7 +398,7 @@
 
 	* ja.po: Updated Japanese translations.
 
-2006-05-20  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-20  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -440,7 +444,7 @@
 
 	* pt_BR.po: Updated Brazilian Portuguese translations.
 
-2006-05-06  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
 
@@ -522,7 +526,7 @@
 
 	* eu.po: Basque translation update.
 
-2006-04-24  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-24  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update
 
@@ -550,7 +554,7 @@
 
 	* he.po: Hebrew translations update.
 
-2006-04-17  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-17  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translations update.
 
@@ -586,7 +590,7 @@
 	  <jari.rahkonen@pp2.inet.fi>.
 	* xfce4-panel.pot, *.po: Updated.
 
-2006-04-01  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-01  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translations update & polish by Stathis Kamperis
 	  <ekamperi@auth.gr>
@@ -671,7 +675,7 @@
 
 	* *.po: Update API docs and translations
 
-2006-02-25  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-25  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation
 
@@ -730,7 +734,7 @@
 
 	* he.po: Update Hebrew translations.
 
-2006-02-05  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-05  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -790,7 +794,7 @@
 
 	* pt_BR.po: Updated pt_BR translations for xfce4-panel.
 
-2006-01-05  Stavros Giannouris <stavrosg@serverhive.com>
+2006-01-05  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation
 
@@ -806,7 +810,7 @@
 
 	* xfce4-panel.pot, *.po: update po files.
 
-2005-12-11  Stavros Giannouris <stavrosg@serverhive.com>
+2005-12-11  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations.
 
@@ -822,7 +826,7 @@
 
 	* xfce4-panel.pot, *.po: Updated.
 
-2005-11-21  Stavros Giannouris <stavrosg@serverhive.com>
+2005-11-21  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Update Greek Panel translations.
 
@@ -909,7 +913,7 @@
 
 	* zh_TW.po: Update zh_TW translations
 
-2005-10-09  Stavros Giannouris <stavrosg@serverhive.com>
+2005-10-09  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Minor panel translation update
 
@@ -923,7 +927,7 @@
 	* de.po: Updated German translations by Fabian Nowak
 	  <timystery@arcor.de>.
 
-2005-10-06  Stavros Giannouris <stavrosg@serverhive.com>
+2005-10-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Minor updates & polishing for the Greek translations
 
@@ -931,7 +935,7 @@
 
 	* zh_TW.po: Update xfce4-panel zh_TW translations
 
-2005-09-30  Stavros Giannouris <stavrosg@serverhive.com>
+2005-09-30  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated EL translations for xfce4-panel/trunk
 
