* el.po: Greek translation update
(Old svn revision: 26630)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-19  Stavros Giannouris <stavrosg@hellug.gr>
+
+	* el.po: Greek translation update
+
 2008-02-14  Stephan Arts <stephan@xfce.org>
 
 	* si.po: Add Sinhala translations by Rashan Anushka
@@ -255,7 +259,7 @@
 	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
-2006-08-26  Stavros Giannouris <stavrosg@serverhive.com>
+2006-08-26  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -292,7 +296,7 @@
 	* eo.po: Updated Esperanto translations by
 	  Antono Vasiljev <antonalist@gmail.com>
 
-2006-08-04  Stavros Giannouris <stavrosg@serverhive.com>
+2006-08-04  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -342,7 +346,7 @@
 
 	* ja.po: Updated Japanese translations.
 
-2006-05-20  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-20  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update.
 
@@ -388,7 +392,7 @@
 
 	* pt_BR.po: Updated Brazilian Portuguese translations.
 
-2006-05-06  Stavros Giannouris <stavrosg@serverhive.com>
+2006-05-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation.
 
@@ -470,7 +474,7 @@
 
 	* eu.po: Basque translation update.
 
-2006-04-24  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-24  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translation update
 
@@ -498,7 +502,7 @@
 
 	* he.po: Hebrew translations update.
 
-2006-04-17  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-17  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translations update.
 
@@ -534,7 +538,7 @@
 	  <jari.rahkonen@pp2.inet.fi>.
 	* xfce4-panel.pot, *.po: Updated.
 
-2006-04-01  Stavros Giannouris <stavrosg@serverhive.com>
+2006-04-01  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Greek translations update & polish by Stathis Kamperis
 	  <ekamperi@auth.gr>
@@ -619,7 +623,7 @@
 
 	* *.po: Update API docs and translations
 
-2006-02-25  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-25  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation
 
@@ -678,7 +682,7 @@
 
 	* he.po: Update Hebrew translations.
 
-2006-02-05  Stavros Giannouris <stavrosg@serverhive.com>
+2006-02-05  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations
 
@@ -738,7 +742,7 @@
 
 	* pt_BR.po: Updated pt_BR translations for xfce4-panel.
 
-2006-01-05  Stavros Giannouris <stavrosg@serverhive.com>
+2006-01-05  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translation
 
@@ -754,7 +758,7 @@
 
 	* xfce4-panel.pot, *.po: update po files.
 
-2005-12-11  Stavros Giannouris <stavrosg@serverhive.com>
+2005-12-11  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated Greek translations.
 
@@ -770,7 +774,7 @@
 
 	* xfce4-panel.pot, *.po: Updated.
 
-2005-11-21  Stavros Giannouris <stavrosg@serverhive.com>
+2005-11-21  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Update Greek Panel translations.
 
@@ -857,7 +861,7 @@
 
 	* zh_TW.po: Update zh_TW translations
 
-2005-10-09  Stavros Giannouris <stavrosg@serverhive.com>
+2005-10-09  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Minor panel translation update
 
@@ -871,7 +875,7 @@
 	* de.po: Updated German translations by Fabian Nowak
 	  <timystery@arcor.de>.
 
-2005-10-06  Stavros Giannouris <stavrosg@serverhive.com>
+2005-10-06  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Minor updates & polishing for the Greek translations
 
@@ -879,7 +883,7 @@
 
 	* zh_TW.po: Update xfce4-panel zh_TW translations
 
-2005-09-30  Stavros Giannouris <stavrosg@serverhive.com>
+2005-09-30  Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Updated EL translations for xfce4-panel/trunk
 
