Update Chinese translation
(Old svn revision: 26664)

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -4,14 +4,14 @@
 # Yongtao Yang <yongtao.yang@telia.com>, 2004.
 # Huang Huan <unicon221@gmail.com>, 2006.
 # Jick Nan <jick.nan@gmail.com>, 2006.
-# wuli <wurisky@gmail.com>,2007
+# wuli <wurisky@gmail.com>,2007,2008
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-03-30 23:41+0800\n"
+"PO-Revision-Date: 2008-03-05 05:07+0100\n"
 "Last-Translator: wuli <wurisky@gmail.com>\n"
 "Language-Team: Simplified Chinese <xfce-i18n@xfce.org>\n"
 "MIME-Version: 1.0\n"
@@ -358,12 +358,11 @@ msgstr "退出 + 锁住屏幕"
 
 #: ../plugins/clock/clock-dialog.c:358
 msgid "Custom"
-msgstr ""
+msgstr "自定义"
 
 #: ../plugins/clock/clock-dialog.c:412
-#, fuzzy
 msgid "Display _seconds"
-msgstr "显示秒钟"
+msgstr "显示秒(_S)"
 
 #: ../plugins/clock/clock-dialog.c:421
 msgid "Use 24-_hour clock"
@@ -374,9 +373,8 @@ msgid "Fl_ash time separators"
 msgstr ""
 
 #: ../plugins/clock/clock-dialog.c:433
-#, fuzzy
 msgid "Sho_w AM/PM"
-msgstr "显示AM/PM"
+msgstr "显示 AM/PM (_W)"
 
 #: ../plugins/clock/clock-dialog.c:442
 msgid "True _binary clock"
@@ -401,20 +399,19 @@ msgid "Digital"
 msgstr "数字式"
 
 #: ../plugins/clock/clock-dialog.c:515
-#, fuzzy
 msgid "LCD"
-msgstr "数字液晶显示"
+msgstr "液晶式"
 
 #. show frame
 #: ../plugins/clock/clock-dialog.c:520
 #: ../plugins/systray/xfce-tray-dialogs.c:362
 msgid "Show _frame"
-msgstr "显示框架(_f)"
+msgstr "显示边框(_f)"
 
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:527
 msgid "Tooltip Format"
-msgstr ""
+msgstr "鼠标提示格式"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:553
@@ -463,11 +460,11 @@ msgstr "选择一个应用程序："
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr "所以文件"
+msgstr "所有文件"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr "可以执行文件"
+msgstr "可执行文件"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
@@ -499,7 +496,7 @@ msgstr "为 \"%s\" 选择一个图标"
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr ""
+msgstr "未命名"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
@@ -535,18 +532,18 @@ msgid "Program Launcher"
 msgstr "程序启动器"
 
 #: ../plugins/launcher/launcher-dialog.c:1551
-#, fuzzy
+#, 
 msgid "A_rrow:"
-msgstr "箭头按钮(_R)"
+msgstr "箭头(_R)"
 
 #: ../plugins/launcher/launcher-dialog.c:1557
 msgid "Default"
 msgstr "默认"
 
 #: ../plugins/launcher/launcher-dialog.c:1562
-#, fuzzy
+#, 
 msgid "Inside Button"
-msgstr "图标按钮(_I)"
+msgstr "内置按钮(_I)"
 
 #: ../plugins/pager/pager.c:365 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -565,9 +562,8 @@ msgid "Switch workspaces using the mouse wheel"
 msgstr "用鼠标滚轮切换工作区"
 
 #: ../plugins/pager/pager.c:434
-#, fuzzy
 msgid "Show workspace names"
-msgstr "显示工作区动作(_K)"
+msgstr "显示工作区名称(_K)"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -575,25 +571,25 @@ msgid "Separator or Spacing"
 msgstr "分隔符或间隔"
 
 #: ../plugins/separator/separator.c:430
-#, fuzzy
+#, 
 msgid "Separator Style"
-msgstr "分隔符或间隔"
+msgstr "分隔符风格"
 
 #. space
 #: ../plugins/separator/separator.c:437
 msgid "_Empty Space"
-msgstr ""
+msgstr "空格(_E)"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr ""
+msgstr "展开空格(_E)"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
-msgstr ""
+msgstr "线(_L)"
 
 #: ../plugins/separator/separator.c:464
-#, fuzzy
+#, 
 msgid "_Handle"
 msgstr "处理："
 
@@ -639,14 +635,13 @@ msgstr "行数："
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
-#, fuzzy
 msgid "Hidden Applications"
-msgstr "选择一个应用程序："
+msgstr "隐藏应用程序："
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
 msgid "Failed to acquire manager selection for screen %d"
-msgstr ""
+msgstr "不能获得管理选择器 %d"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:143
 #: ../plugins/tasklist/tasklist-dialogs.c:209
