--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-05	Mike Massonnet <mmassonnet@xfce.org>
+
+	* zh_CN.po: Update Chinese translation by risky <wurisky@gmail.com>
+
 2008-02-19	Stavros Giannouris <stavrosg@hellug.gr>
 
 	* el.po: Improve/update translation.
