--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+4.4.3
+=====
+- Quite a bit code changed in the dnd code. Mostly to fix segfaul in
+  FreeBSD-amd64, but more problems were discovered and a lot of code
+  was simplified and a memory leak was plugged.
+- Don't respond the uri drags, we don't use it and it only causes problems
+  like hiding the panel when a file was dragged over the panel (Bug #3815).
+
+
 4.4.2
 =====
 - Fix window manager hints reporting width 1 pixel too wide (bug #3402).
