Update German translations by Enrico Tröger
(Old svn revision: 26676)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-12	Jean-François Wauthy <pollux@xfce.org>
+	* de.po: Update German translations by Enrico Tröger
+	<enrico.troeger@uvena.de>
+
 2008-03-05	Mike Massonnet <mmassonnet@xfce.org>
 
 	* ru.po: Update Russian translation by Andrey Fedoseev
