Updated Finnish translation
(Old svn revision: 26677)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,9 @@
+2008-03-12	Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+
+	* fi.po: Updated Finnish translation
+
 2008-03-12	Jean-François Wauthy <pollux@xfce.org>
+
 	* de.po: Update German translations by Enrico Tröger
 	<enrico.troeger@uvena.de>
 
