Update Catalan translation
(Old svn revision: 26684)

--- a/po/ca.po
+++ b/po/ca.po
@@ -2,7 +2,7 @@
 # xfce4-panel for XFce desktop environment.
 # Copyright (C) 2002-2006 The Xfce development team.
 # This file is distributed under the same license as the xfce4-panel package.
-# Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004.
+# Carles Muñoz Gorriz <carlesmu@internuatas.org>, 2003-2004, 2008.
 # Pau Rul.lan Ferragut <paurullan@bulma.net> 2005-2007
 # Ivà Burgos <debian.public@gmail.com>, 2007
 msgid ""
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-09-30 10:06+0200\n"
-"Last-Translator: Pau Rul.lan Ferragut <paurullan@bulma.net>\n"
+"PO-Revision-Date: 2008-03-15 18:24+0100\n"
+"Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -497,7 +497,7 @@ msgstr "Seleccioneu una icona per «%s»"
 #: ../plugins/launcher/launcher-dialog.c:842
 #: ../plugins/launcher/launcher-dialog.c:1341
 msgid "Unnamed"
-msgstr ""
+msgstr "Sense nom"
 
 #: ../plugins/launcher/launcher-dialog.c:1120
 msgid "_Name"
@@ -561,9 +561,8 @@ msgid "Switch workspaces using the mouse wheel"
 msgstr "Commuta entre escriptoris amb la roda del ratolí"
 
 #: ../plugins/pager/pager.c:434
-#, fuzzy
 msgid "Show workspace names"
-msgstr "_Mostra les accions dels espais de treball"
+msgstr "Mostra els noms dels espais de treball"
 
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
@@ -618,18 +617,16 @@ msgstr "Ja hi ha una safata del sistema executant-se a la pantalla"
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "El gestor de la safata ha perdut la selecció"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Esteu segurs de voler suprimir l'espai de treball «%s»?"
+msgstr "Voleu suprimir la llista d'aplicacions conegudes?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Nombre de files:"
+msgstr "_Nombre de files:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
