--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-03-18	Mike Massonnet <mmassonnet@xfce.org>
+
+	* ca.po: Update Catalan translation by Carles Muñoz Gorriz
+	<carlesmu@ya.com>
+
 2008-03-12	Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
 
 	* fi.po: Updated Finnish translation
