Update Catalan translation
(Old svn revision: 26698)

--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: xfce4-panel 4.4.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2008-03-15 18:24+0100\n"
+"PO-Revision-Date: 2008-03-21 20:14+0100\n"
 "Last-Translator: Carles Muñoz Gorriz <carlesmu@internautas.org>\n"
 "Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
@@ -371,7 +371,7 @@ msgstr "Utilitza estil de 24 _hores"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "Separador _espurnejant"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
