--- a/po/lv.po
+++ b/po/lv.po
@@ -1,27 +1,31 @@
+# translation of lv.po to Latvian
 # Latvian translations for xfce4-panel package.
 # Copyright (C) 2002-2007 The Xfce development team.
 # This file is distributed under the same license as the xfce4-pane package.
-# Rihards Prieditis <rprieditis@inbox.lv>, 2007.
 #
+# Rihards Prieditis <rprieditis@inbox.lv>, 2007.
+# Rihards Prieditis <RPrieditis@gmail.com>, 2008.
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel 4.4.0\n"
+"Project-Id-Version: lv\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-12-12 12:57+0100\n"
-"PO-Revision-Date: 2007-10-28 15:50+0300\n"
-"Last-Translator: Rihards Priedītis <rprieditis@inbox.lv>\n"
-"Language-Team: Latvian <rprieditis@inbox.lv>\n"
+"PO-Revision-Date: 2008-04-06 20:45+0300\n"
+"Last-Translator: Rihards Prieditis <RPrieditis@gmail.com>\n"
+"Language-Team: Latvian <RPrieditis@gmail.com>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n != 0 ? 1 : 2);\n"
 
 #: ../config/launcher-7.rc.in.h:1
 msgid "Command Prompt"
-msgstr "Komandu Līnija"
+msgstr "Komandu līnija"
 
 #: ../config/launcher-7.rc.in.h:2
 msgid "X terminal emulator"
-msgstr "X termināļa emulators"
+msgstr "X termināla emulators"
 
 #: ../config/launcher-8.rc.in.h:1
 msgid "Edit text files"
@@ -33,7 +37,7 @@ msgstr "Redaktors"
 
 #: ../config/launcher-9.rc.in.h:1
 msgid "File Manager"
-msgstr "Faila Pārvaldnieks"
+msgstr "Failu pārvaldnieks"
 
 #: ../config/launcher-9.rc.in.h:2
 msgid "Manage files and folders"
@@ -45,7 +49,7 @@ msgstr "Pārlūkot internetu"
 
 #: ../config/launcher-10.rc.in.h:2
 msgid "Web Browser"
-msgstr "Tīmekļa Pārlūks"
+msgstr "Tīmekļa pārlūks"
 
 #. dialogs are annoying, just spit out a warning
 #: ../libxfce4panel/xfce-panel-external-item.c:169
@@ -59,10 +63,8 @@ msgid "Remove \"%s\"?"
 msgstr "Noņemt \"%s\"?"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:620
-msgid ""
-"The item will be removed from the panel and its configuration will be lost."
-msgstr ""
-"Šis vienums tiks noņemts no paneļa un tā saglabātā konfigurācija pazudīs."
+msgid "The item will be removed from the panel and its configuration will be lost."
+msgstr "Šis vienums tiks noņemts no paneļa un tā saglabātā konfigurācija pazudīs."
 
 #. configure, hide by default
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:837
@@ -85,16 +87,16 @@ msgstr "Noņemt"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:902
 msgid "Add New Item"
-msgstr "Pievienot Jaunu Vienumu"
+msgstr "Pievienot jaunu vienumu"
 
 #: ../libxfce4panel/xfce-panel-plugin-iface.c:913 ../panel/panel.c:694
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:1
 msgid "Customize Panel"
-msgstr "Pielāgot Paneli"
+msgstr "Pielāgot paneli"
 
 #: ../panel/panel.c:705
 msgid "Add Items"
-msgstr "Pievienot Vienumus"
+msgstr "Pievienot vienumus"
 
 #: ../panel/panel.c:721 ../plugins/actions/actions.c:286
 #: ../plugins/actions/actions.c:320 ../plugins/actions/actions.c:458
@@ -107,15 +109,15 @@ msgstr "Restartēt"
 
 #: ../panel/panel.c:745
 msgid "About the Xfce Panel"
-msgstr "Par Xfce Paneli"
+msgstr "Par Xfce paneli"
 
 #: ../panel/panel-app.c:258 ../panel/panel-app.c:892
 msgid "Exit Xfce Panel?"
-msgstr "Iziet no Xfce Panelis?"
+msgstr "Iziet no Xfce paneļa?"
 
 #: ../panel/panel-app.c:890 ../panel/panel-app.c:922 ../panel/panel-app.c:955
 msgid "Xfce Panel"
-msgstr "Xfce Panelis"
+msgstr "Xfce panelis"
 
 #: ../panel/panel-app.c:893
 msgid "You can't remove the last panel. Would you like to exit the program?"
@@ -124,7 +126,7 @@ msgstr "Jūs nevarat noņemt pēdējo paneli. Vai vēlaties iziet no programmas?
 #: ../panel/panel-app.c:920
 #, c-format
 msgid "Remove Panel \"%d\"?"
-msgstr "Noņemt Paneli \"%d\"?"
+msgstr "Noņemt paneli \"%d\"?"
 
 #: ../panel/panel-app.c:924
 msgid "The selected panel and all its items will be removed."
@@ -136,7 +138,7 @@ msgstr "Izstrādātājs"
 
 #: ../panel/main.c:60
 msgid "Show this message and exit"
-msgstr "Rādī šo ziņu un iziet"
+msgstr "Rādīt šo ziņu un iziet"
 
 #: ../panel/main.c:61
 msgid "Show configuration dialog"
@@ -172,7 +174,7 @@ msgstr "Autortiesības (c) 2004-2007"
 
 #: ../panel/main.c:103
 msgid "The Xfce development team. All rights reserved."
-msgstr "Xfce izstrādātāju komanda. Visas tiesības rezervētas."
+msgstr "Xfce izstrādātāju komanda. Visas tiesības paturētas."
 
 #: ../panel/main.c:104
 #, c-format
@@ -195,7 +197,7 @@ msgstr "Nevarēju atvērt moduli \"%s\""
 
 #: ../panel/panel-dialogs.c:634
 msgid "Add Items to the Panel"
-msgstr "Pievienot Vienumus Panelim"
+msgstr "Pievienot vienumus panelim"
 
 #: ../panel/panel-dialogs.c:665
 msgid ""
@@ -207,27 +209,27 @@ msgstr ""
 
 #: ../panel/panel-dialogs.c:682
 msgid "Available Items"
-msgstr "Pieejamie Vienumi"
+msgstr "Pieejamie vienumi"
 
 #: ../panel/panel-dialogs.c:908 ../panel/panel-dialogs.c:1144
 msgid "Normal Width"
-msgstr "Normāls Platums"
+msgstr "Normāls platums"
 
 #: ../panel/panel-dialogs.c:909 ../panel/panel-dialogs.c:1145
 msgid "Full Width"
-msgstr "Pilns Platums"
+msgstr "Pilns platums"
 
 #: ../panel/panel-dialogs.c:913 ../panel/panel-dialogs.c:1149
 msgid "Normal Height"
-msgstr "Normāls Augstums"
+msgstr "Normāls augstums"
 
 #: ../panel/panel-dialogs.c:914 ../panel/panel-dialogs.c:1150
 msgid "Full Height"
-msgstr "Pilns Augstums"
+msgstr "Pilns augstums"
 
 #: ../panel/panel-dialogs.c:922 ../panel/panel-dialogs.c:1159
 msgid "Span Monitors"
-msgstr "Savienot Monitorus"
+msgstr "Savienot monitorus"
 
 #: ../panel/panel-dialogs.c:985 ../panel/panel-dialogs.c:1224
 #: ../panel/panel-dialogs.c:1521 ../plugins/launcher/launcher-dialog.c:1558
@@ -256,15 +258,15 @@ msgstr "Pozīcija"
 
 #: ../panel/panel-dialogs.c:1038
 msgid "Fixed Position"
-msgstr "Fiksēta Pozīcija"
+msgstr "Fiksēta pozīcija"
 
 #: ../panel/panel-dialogs.c:1044
 msgid "Freely Moveable"
-msgstr "Brīvi Pārvietojams"
+msgstr "Brīvi pārvietojams"
 
 #: ../panel/panel-dialogs.c:1167
 msgid "Auto_hide"
-msgstr "Autmātiska _slēpšana"
+msgstr "Automātiska _slēpšana"
 
 #: ../panel/panel-dialogs.c:1185 ../plugins/actions/actions.c:471
 msgid "Orientation:"
@@ -288,7 +290,7 @@ msgstr "Abās pusēs"
 
 #: ../panel/panel-dialogs.c:1300
 msgid "Select Monitor"
-msgstr "Norādīt Monitoru"
+msgstr "Norādīt monitoru"
 
 #. appearance settings
 #. appearance
@@ -328,16 +330,16 @@ msgstr "Panelis %d"
 
 #: ../panel/panel-dialogs.c:1643
 msgid "Remove Panel"
-msgstr "Noņemt Paneli"
+msgstr "Noņemt paneli"
 
 #: ../panel/panel-dialogs.c:1656
 msgid "New Panel"
-msgstr "Jauns Panelis"
+msgstr "Jauns panelis"
 
 #: ../panel/panel-dialogs.c:1716
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:2
 msgid "Panel Manager"
-msgstr "Paneļu Pārvaldnieks"
+msgstr "Paneļu pārvaldnieks"
 
 #: ../plugins/actions/actions.c:267 ../plugins/actions/actions.c:303
 #: ../plugins/actions/actions.c:459
@@ -346,7 +348,7 @@ msgstr "Aizslēgt ekrānu"
 
 #: ../plugins/actions/actions.c:419
 msgid "Panel Actions"
-msgstr "Paneļa Darbības"
+msgstr "Paneļa darbības"
 
 #: ../plugins/actions/actions.c:449
 msgid "Select action type:"
@@ -370,7 +372,7 @@ msgstr "Izmantot 24-_stundu pulksteni"
 
 #: ../plugins/clock/clock-dialog.c:427
 msgid "Fl_ash time separators"
-msgstr ""
+msgstr "_Miršķināt laika atdalītāju"
 
 #: ../plugins/clock/clock-dialog.c:433
 msgid "Sho_w AM/PM"
@@ -411,17 +413,17 @@ msgstr "Rādīt _rāmi"
 #. tooltip settings
 #: ../plugins/clock/clock-dialog.c:527
 msgid "Tooltip Format"
-msgstr "Paskaidres Formāts"
+msgstr "Paskaidres formāts"
 
 #. clock settings
 #: ../plugins/clock/clock-dialog.c:553
 msgid "Clock Options"
-msgstr "Pulksteņa Uzstādījumi"
+msgstr "Pulksteņa uzstādījumi"
 
 #: ../plugins/iconbox/iconbox.c:910
 #: ../plugins/iconbox/iconbox.desktop.in.in.h:1
 msgid "Icon Box"
-msgstr "Ikonu Kaste"
+msgstr "Ikonu kaste"
 
 #: ../plugins/iconbox/iconbox.c:935
 msgid "Only show minimized applications"
@@ -439,7 +441,7 @@ msgstr "Izmantot visu pieejamo vietu"
 #. set some default values
 #: ../plugins/launcher/launcher.c:700 ../plugins/launcher/launcher.c:760
 msgid "New Item"
-msgstr "Jauns Vienums"
+msgstr "Jauns vienums"
 
 #: ../plugins/launcher/launcher-exec.c:526
 #, c-format
@@ -452,35 +454,35 @@ msgstr "Nav ikonas"
 
 #: ../plugins/launcher/launcher-dialog.c:597
 msgid "Select a Directory"
-msgstr "Norādiet Direktoriju"
+msgstr "Norādiet direktoriju"
 
 #: ../plugins/launcher/launcher-dialog.c:641
 msgid "Select an Application"
-msgstr "Norādiet Lietotni"
+msgstr "Norādiet lietotni"
 
 #: ../plugins/launcher/launcher-dialog.c:651
 msgid "All Files"
-msgstr "Visi Faili"
+msgstr "Visi faili"
 
 #: ../plugins/launcher/launcher-dialog.c:656
 msgid "Executable Files"
-msgstr "Izpildāmie Faili"
+msgstr "Izpildāmie faili"
 
 #: ../plugins/launcher/launcher-dialog.c:671
 msgid "Perl Scripts"
-msgstr "Perl Skripti"
+msgstr "Perl skripti"
 
 #: ../plugins/launcher/launcher-dialog.c:677
 msgid "Python Scripts"
-msgstr "Python Skripti"
+msgstr "Python skripti"
 
 #: ../plugins/launcher/launcher-dialog.c:683
 msgid "Ruby Scripts"
-msgstr "Ruby Skripti"
+msgstr "Ruby skripti"
 
 #: ../plugins/launcher/launcher-dialog.c:689
 msgid "Shell Scripts"
-msgstr "Čaulas Skripti"
+msgstr "Čaulas skripti"
 
 #: ../plugins/launcher/launcher-dialog.c:761
 msgid "Unknown"
@@ -490,7 +492,7 @@ msgstr "Nezināms"
 #: ../plugins/launcher/launcher-dialog.c:764
 #, c-format
 msgid "Select an Icon for \"%s\""
-msgstr "Norādiet Ikonu priekš \"%s\""
+msgstr "Norādiet ikonu priekš \"%s\""
 
 #. build name
 #: ../plugins/launcher/launcher-dialog.c:842
@@ -516,7 +518,7 @@ msgstr "Ko_manda"
 
 #: ../plugins/launcher/launcher-dialog.c:1202
 msgid "_Working Directory"
-msgstr "_Darba Direktorija"
+msgstr "_Darba direktorija"
 
 #: ../plugins/launcher/launcher-dialog.c:1234
 msgid "Run in _terminal"
@@ -529,7 +531,7 @@ msgstr "Izmantot _sāknēšanas paziņošanu"
 #. create new dialog
 #: ../plugins/launcher/launcher-dialog.c:1523
 msgid "Program Launcher"
-msgstr "Programmu Palaidējs"
+msgstr "Programmu palaidējs"
 
 #: ../plugins/launcher/launcher-dialog.c:1551
 msgid "A_rrow:"
@@ -541,7 +543,7 @@ msgstr "Noklusētais"
 
 #: ../plugins/launcher/launcher-dialog.c:1562
 msgid "Inside Button"
-msgstr "Iekšējā Poga"
+msgstr "Iekšējā poga"
 
 #: ../plugins/pager/pager.c:365 ../plugins/pager/pager.desktop.in.in.h:2
 msgid "Pager"
@@ -566,11 +568,11 @@ msgstr "Rādīt dar_bavietas nosaukumus"
 #: ../plugins/separator/separator.c:409
 #: ../plugins/separator/separator.desktop.in.in.h:2
 msgid "Separator or Spacing"
-msgstr "Atdalītājs vai Atkāpe"
+msgstr "Atdalītājs vai atstarpe"
 
 #: ../plugins/separator/separator.c:430
 msgid "Separator Style"
-msgstr "Atdalītāja Stils"
+msgstr "Atdalītāja stils"
 
 #. space
 #: ../plugins/separator/separator.c:437
@@ -579,7 +581,7 @@ msgstr "_Atstarpe"
 
 #: ../plugins/separator/separator.c:446
 msgid "_Expanding Empty Space"
-msgstr "_Paplašinošā Atstarpe"
+msgstr "_Paplašinošā atstarpe"
 
 #: ../plugins/separator/separator.c:455
 msgid "_Line"
@@ -607,32 +609,30 @@ msgstr "Slēpt logus un rādīt darbavirsmu"
 #: ../plugins/systray/xfce-tray-dialogs.c:333
 #: ../plugins/systray/systray.desktop.in.in.h:2
 msgid "System Tray"
-msgstr "Sistēmas Josla"
+msgstr "Sistēmas josla"
 
 #: ../plugins/systray/xfce-tray-plugin.c:98
 msgid "There is already a system tray running on this screen"
-msgstr "Sistēmas Josla jau skrien šai ekrānā"
+msgstr "Sistēmas josla jau skrien šai ekrānā"
 
 #. message
 #: ../plugins/systray/xfce-tray-plugin.c:219
 msgid "The tray manager lost selection"
-msgstr ""
+msgstr "Sistēmas joslas pārvaldnieks zaudēja atlasi"
 
 #: ../plugins/systray/xfce-tray-dialogs.c:280
-#, fuzzy
 msgid "Are you sure you want to clear the list of known applications?"
-msgstr "Esat drošs, ka vēlaties noņemt darbavietu '%s'?"
+msgstr "Esat drošs, ka vēlaties notīrīt zināmo lietotņu sarakstu?"
 
 #. number of rows
 #: ../plugins/systray/xfce-tray-dialogs.c:374
-#, fuzzy
 msgid "_Number of rows:"
-msgstr "Rindu skaits:"
+msgstr "_Rindu skaits:"
 
 #. applications
 #: ../plugins/systray/xfce-tray-dialogs.c:389
 msgid "Hidden Applications"
-msgstr "Slēptās Lietotnes"
+msgstr "Slēptās lietotnes"
 
 #: ../plugins/systray/xfce-tray-manager.c:431
 #, c-format
@@ -643,11 +643,11 @@ msgstr "Neizdevās iegūt atlases pārvaldnieku ekrānam %d"
 #: ../plugins/tasklist/tasklist-dialogs.c:209
 #: ../plugins/tasklist/tasklist.desktop.in.in.h:2
 msgid "Task List"
-msgstr "Uzdevumu Saraksts"
+msgstr "Uzdevumu saraksts"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:174
 msgid "Minimum Width:"
-msgstr "Minimālais Platums:"
+msgstr "Minimālais platums:"
 
 #: ../plugins/tasklist/tasklist-dialogs.c:194
 msgid "Use flat buttons"
@@ -697,19 +697,19 @@ msgstr "Pievienot darbavietu"
 #: ../plugins/windowlist/windowlist.c:617
 #, c-format
 msgid "Remove Workspace %d"
-msgstr "Noņemt Darbavietu %d"
+msgstr "Noņemt darbavietu %d"
 
 #: ../plugins/windowlist/windowlist.c:618
 #, c-format
 msgid "Remove Workspace '%s'"
-msgstr "Noņemt Darbavietu '%s'"
+msgstr "Noņemt darbavietu '%s'"
 
 #. Windowlist Settings
 #: ../plugins/windowlist/windowlist-dialog.c:121
 #: ../plugins/windowlist/windowlist-dialog.c:212
 #: ../plugins/windowlist/windowlist.desktop.in.in.h:2
 msgid "Window List"
-msgstr "Logu Saraksts"
+msgstr "Logu saraksts"
 
 #: ../plugins/windowlist/windowlist-dialog.c:150
 msgid ""
@@ -722,7 +722,7 @@ msgstr ""
 #. Button Urgency Notification
 #: ../plugins/windowlist/windowlist-dialog.c:157
 msgid "Urgency Notification"
-msgstr "Steidzamā Paziņošana"
+msgstr "Steidzamā paziņošana"
 
 #: ../plugins/windowlist/windowlist-dialog.c:164
 msgid "_Disabled"
@@ -766,7 +766,7 @@ msgstr "Panelis"
 
 #: ../plugins/actions/actions.desktop.in.in.h:1
 msgid "Action Buttons"
-msgstr "Darbību Pogas"
+msgstr "Darbību pogas"
 
 #: ../plugins/actions/actions.desktop.in.in.h:2
 msgid "Log out or lock the screen"
@@ -798,7 +798,7 @@ msgstr "Pievieno atstarpi vai līniju starp paneļa vienumiem"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:1
 msgid "Show Desktop"
-msgstr "Rādīt Darbavirsmu"
+msgstr "Rādīt darbavirsmu"
 
 #: ../plugins/showdesktop/showdesktop.desktop.in.in.h:2
 msgid "Toggle desktop show/hide"
@@ -818,7 +818,5 @@ msgstr "Rādīt sarakstu ar visiem pieejamajiem logiem"
 
 #: ../mcs-plugin/xfce4-panel-manager.desktop.in.h:3
 msgid "Xfce 4 Panel Manager"
-msgstr "Xfce 4 Paneļu Pārvaldnieks"
+msgstr "Xfce 4 paneļu pārvaldnieks"
 
-#~ msgid "Failed to register the system tray for screen %d"
-#~ msgstr "Neizdevās reģistrēt sistēmas joslu ekrānam %d"
